[package]
name = "gaps"
version = "0.2.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/gaps"
repository = "https://github.com/d-e-s-o/gaps.git"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
description = """
Functionality for working with gaps/holes in ordered sequences of values.
"""

[dev-dependencies]
maplit = "1.0"
